--- a/2A-BayesianLogic.qmd
+++ b/2A-BayesianLogic.qmd
@@ -248,6 +248,8 @@ text(0.75,0.07, "95 % Credibile\n Interval")
 
 ```
 
+### HPD and LPL
+
 There are two alternatives to the credibility interval that is particularly useful if the posterior has weird correlation structres.
 
 1.  The **Highest Posterior Density** (HPD). The HPD is the x% highest posterior density interval is the shortest interval in parameter space that contains x% of the posterior probability. It would be a bit cumbersome to calculate this in this example, but if you have an MCMC sample, you get the HPD with the package coda via
@@ -258,7 +260,9 @@ HPDinterval(obj, prob = 0.95, ...)
 
 2.  The Lowest Posterior Loss (LPL) interval, which considers also the prior.
 
-More on both alternatives [here](http://www.bayesian-inference.com/credible)
+More on both alternatives [here](http://www.bayesian-inference.com/credible).
+
+More options to plot HPD in 2-d here http://www.sumsar.net/blog/2014/11/how-to-summarize-a-2d-posterior-using-a-highest-density-ellipse/
 
 ### Multivariate issues
 
@@ -409,18 +413,12 @@ set.seed(124)
 sample=banana(A=0.5,B=0,C1=3,C2=3,50000)
 scatterhist(sample[,1], sample[,2])
 
-#par(mfg = c(2,1))
-
-# skaliert nicht richtig!!!, vielleicht in die Histogramme einbauen?
-
 #abline(h = 0.22, col = "green", lwd = 3, lty =2)
 #abline(v = 0.295, col = "green", lwd = 3, lty =2)
 
 ```
 
 Hence, it's important to note that the marginal distributions are not suited to calculate the MAP, CIs, HPDs or any other summary statistics if the posterior distribution is not symmetric in multivariate space. This is a real point of confusion for many people, so keep it in mind!
-
-More options to plot HPD in 2-d here http://www.sumsar.net/blog/2014/11/how-to-summarize-a-2d-posterior-using-a-highest-density-ellipse/
 
 ## Prior Choice
 
@@ -443,7 +441,8 @@ Scaling is key to understand why uninformative priors can't always be flat. Imag
 ```{r}
 values = 1:5
 priorWeight = rep(1/5, 5)
-barplot(priorWeight, names.arg = values, xlab = "size [cm]", ylab = "priorProbability", col = "darkseagreen")
+barplot(priorWeight, names.arg = values, xlab = "size [cm]", 
+        ylab = "priorProbability", col = "darkseagreen")
 ```
 
 Now, let's assume that we decide do change the analysis slightly, and measure average size in the basal area, which scales to diameter as x\^2. We have already specified our prior knowledge about diameter, so for each cm of diameter we have specified the same weight.
@@ -451,7 +450,8 @@ Now, let's assume that we decide do change the analysis slightly, and measure av
 If we rescale the x-axis to basal area, the length of each bar on the x-axis changes - large values are getting broader, short values are getting more narrow. If the probability weight is to stay the same, we get the following picture:
 
 ```{r}
-barplot(priorWeight/values^2, width = values^2, names.arg = values^2, xlab = "size [cm^2]", ylab = "priorProbability", col = "darkseagreen")
+barplot(priorWeight/values^2, width = values^2, names.arg = values^2, 
+        xlab = "size [cm^2]", ylab = "priorProbability", col = "darkseagreen")
 ```
 
 The message here is that if we are free to rescale predictors as we want (which is generally true), the prior cannot be flat for all possible parameter transformations.
@@ -531,3 +531,7 @@ Jeffreys priors for mixture estimation http://arxiv.org/abs/1511.03145
 **Informative priors**
 
 Choy, S. L.; O'Leary, R. & Mengersen, K. (2009) Elicitation by design in ecology: using expert opinion to inform priors for Bayesian statistical models. Ecology, 90, 265-277
+
+
+
+
