--- a/4D-AutoregressiveModels.qmd
+++ b/4D-AutoregressiveModels.qmd
@@ -10,7 +10,9 @@ set.seed(42)
 
 # Autoregressive models
 
-## Example
+In general, autoregressive models should not be be fit with Jags, but with a
+
+## Example with Jags
 
 This is based on code posted originally by Petr Keil <http://www.petrkeil.com/?p=1910>, to illustrate some comments I made in response to this blog post
 
@@ -21,7 +23,7 @@ library(mvtnorm)   # to draw multivariate normal outcomes
 library(R2jags)    # JAGS-R interface
 ```
 
-## Creating the data
+### Creating the data
 
 This helper function that makes distance matrix for a side\*side 2D array
 
@@ -71,7 +73,7 @@ mean(M)
 #hist(test, breaks = 40)
 ```
 
-## Fitting the model in JAGS
+### Fitting the model in JAGS
 
 preparing the data
 
